# kurs_4sl

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/api/: abstract_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: abstract_storage.py  json_storage.py
src/utils/: filters.py
tests/: test_hh_api.py  test_json_storage.py  test_vacancy.py
